fix(elvis): jumping label in compact input

--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -71,15 +71,6 @@
     }
   }
 
-  //prevent label to not cover green border when focused
-  &.e-form-field--compact:focus-within,
-  &.e-form-field--small:focus-within {
-    .e-form-field__label {
-      height: 10px;
-      border-bottom: 2px solid var(--e-color-background-1);
-    }
-  }
-
   /* Full width - Removes max width for all inputs */
   &.e-form-field--full-width,
   &.e-form-field--full-width .e-input,
